# python_fp_playground

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_fp_playground/: basic_if_else_removal.py  eager_vs_lazy.py  higher_order.py  immuta.py
